Fix invisible text on enter button

--- a/Client/Pages/Components/Wordle/WordleInput.razor.css
+++ b/Client/Pages/Components/Wordle/WordleInput.razor.css
@@ -18,4 +18,5 @@ input {
     border-radius: 6px;
     border: none;
     cursor: pointer;
+    color: var(--text-color)
 }
